wxc/include/ewxw/wxc_glue.h



/* wxCalendarCtrl */
TClassDefExtend(wxCalendarCtrl,wxControl)
TClass(wxCalendarCtrl) wxCalendarCtrl_Create( TClass(wxWindow) _prt, int _id, void* _dat, TRect(_lft,_top,_wdt,_hgt), int _stl );

void       wxCalendarCtrl_EnableHolidayDisplay( TSelf(wxCalendarCtrl) _obj, int display );

void       wxCalendarCtrl_EnableMonthChange( TSelf(wxCalendarCtrl) _obj, TBool enable );

void       wxCalendarCtrl_EnableYearChange( TSelf(wxCalendarCtrl) _obj, TBool enable );

void*      wxCalendarCtrl_GetAttr( TSelf(wxCalendarCtrl) _obj, int day );

void       wxCalendarCtrl_GetDate( TSelf(wxCalendarCtrl) _obj, void* date );

void       wxCalendarCtrl_GetHeaderColourBg( TSelf(wxCalendarCtrl) _obj, TClassRef(wxColour) _ref );

void       wxCalendarCtrl_GetHeaderColourFg( TSelf(wxCalendarCtrl) _obj, TClassRef(wxColour) _ref );

void       wxCalendarCtrl_GetHighlightColourBg( TSelf(wxCalendarCtrl) _obj, TClassRef(wxColour) _ref );

void       wxCalendarCtrl_GetHighlightColourFg( TSelf(wxCalendarCtrl) _obj, TClassRef(wxColour) _ref );

void       wxCalendarCtrl_GetHolidayColourBg( TSelf(wxCalendarCtrl) _obj, TClassRef(wxColour) _ref );

void       wxCalendarCtrl_GetHolidayColourFg( TSelf(wxCalendarCtrl) _obj, TClassRef(wxColour) _ref );

int        wxCalendarCtrl_HitTest( TSelf(wxCalendarCtrl) _obj, TPoint(x,y), void* date, void* wd );

void       wxCalendarCtrl_ResetAttr( TSelf(wxCalendarCtrl) _obj, int day );

void       wxCalendarCtrl_SetAttr( TSelf(wxCalendarCtrl) _obj, int day, void* attr );

void       wxCalendarCtrl_SetDate( TSelf(wxCalendarCtrl) _obj, void* date );

void       wxCalendarCtrl_SetHeaderColours( TSelf(wxCalendarCtrl) _obj, void* colFg, void* colBg );

void       wxCalendarCtrl_SetHighlightColours( TSelf(wxCalendarCtrl) _obj, void* colFg, void* colBg );

void       wxCalendarCtrl_SetHoliday( TSelf(wxCalendarCtrl) _obj, int day );

void       wxCalendarCtrl_SetHolidayColours( TSelf(wxCalendarCtrl) _obj, void* colFg, void* colBg );